# rhododendron

./: .gitignore  1  Cargo.toml  Makefile  README.md  arr  array  array.asm  array_assignment  array_assignment.asm  array_basic.asm  assignment  assignment.asm  cgen.c  cgen.h  code_gen_docs.md  compile.sh  declare.asm  error.c  error.h  expr  expr.asm  fcc  function  function.asm  function.c  function_basic  function_basic.asm  gcc_stack.asm  gcc_stack.c  godbolt_example  godbolt_example.asm  grammar.md  grammer  grammer.md  hello  hello.asm  if  if.asm  main.arm  (+45 more)
arm_testing/: expr  expr.asm  expr.s  for.s
c/: cgen.h  parser.c  register.c  register.h  tokenizer.h  vector.c
docs/: CODE_GEN.md  MANUAL.md
fcc/: Cargo.toml  dummy.c  dummy.h
fcc/src/: main.rs
rh_extension/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
rh_extension/syntaxes/: rhododendron.tmLanguage.json
src/: code_gen.rs  error.rs  lexer.rs  linker.rs  main.rs  parser.rs  tests.rs
src/compiler/: ast.rs  code_gen.rs  error.rs  lexer.rs  linker.rs  mod.rs  parser.rs
tests/: declare.rh  expressions.rh
tests/asm/: declare.asm  expressions.asm  if.asm
tests/core/: arr.rh  array.rh  array_assignment.rh  assignment.rh  expr.rh  fail.rh  function.rh  function_basic.rh  if.rh  if_basic.rh  ptr.rh  ptr_test.rh  put.rh  recursion.rh  recursion_basic.rh  string.rh  while.rh
tests/core/asm/: asm.rh
tests/core/declare/: declare.asm  declare.rh
tests/core/expressions/: expressions.rh
tests/core/function/: function.asm  function.rh
tests/rh/: declare.rh  if.rh  while.rh
(+1 files in other folders)
