[package]
name = "rhododendron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.0", features = ["derive"] }
snafu = "0.8.0"
strum = { version = "0.25.0", features = ["derive"] }
