[package]
name = "rhododendron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.0", features = ["derive"] }
colored = "2.1.0"
snafu = "0.8.2"
strum = { version = "0.26.2", features = ["derive"] }
