[package]
name = "fcc"
version = "0.1.0"
authors = ["Azalea Colburn <elocolburn@comcast.net>"]
license = "MIT"
description = "CLI tool for FCC"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindgen = "0.66.1"
bindgen-cli = "0.66.1"
clap = { version = "4.0", features = ["derive"] }
